--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <title>WDD 131 – Dynamic Web Fundamentals - Everett Havey</title>
 </head>
 <body>
-
     <h1>
-        <a href="#">Home</a>
+    </h1>
+    <header>
+        <nav><a href="#">Home</a>
         <a href="https://byupw.instructure.com/">Canvas</a>
         <a href="wwr/">Scripture</a>
         <a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a>
-        <a href="final/">Final Project</a>
-    </h1>
+        <a href="final/">Final Project</a></nav>
+    </header>
 
     <main>
         <section class="card">
-
+            <h2>
+                
+            </h2>
         </section>
         <section class="card">
+            <h2>
 
+            </h2>
         </section>
     </main>
 
