--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 – Dynamic Web Fundamentals - Everett Havey</title>
+    <meta name="description" content="WDD 131 | Everett Havey">
+    <meta name="author" content="Everett Havey">
 </head>
 <body>
-    <h1>
-    </h1>
+    <h1>WDD 131 – Dynamic Web Fundamentals - Everett Havey</h1>
     <header>
         <nav><a href="#">Home</a>
         <a href="https://byupw.instructure.com/">Canvas</a>
@@ -19,7 +20,7 @@
     <main>
         <section class="card">
             <h2>
-                
+
             </h2>
         </section>
         <section class="card">
