--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 – Dynamic Web Fundamentals - Everett Havey</title>
+    <link rel="stylesheet" href="styles/base.css">
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
 </head>
