--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <a href="final/">Final Project</a></nav>
     </header>
 
+    <img src="images/Profile.webp" alt="Everett">
     <main>
         <section class="card">
+
             <h2>
 
             </h2>
