--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <a href="final/">Final Project</a></nav>
     </header>
 
-    <img src="images/Profile.webp" alt="Everett">
     <main>
         <section class="card">
 
-            <h2>
+            <h2></h2>
 
-            </h2>
+            <img src="images/Profile.webp" alt="Everett">
+
+            <p>paragraph</p>
         </section>
         <section class="card">
             <h2>
