--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
             <p>paragraph</p>
         </section>
         <section class="card">
-            <h2>
-
-            </h2>
+            <h2></h2>
+            <img src="images/jpflag.png" alt="Japan Flag">
         </section>
     </main>
 
