--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <a href="https://byupw.instructure.com/">Canvas</a>
         <a href="wwr/">Scripture</a>
         <a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a>
-        <a href="final/">Final Project</a></nav>
+        <a href="final/">Final Project</a>
+        <a></a>
+        <a></a>
+    </nav>
+
     </header>
 
     <main>
