--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 <body>
     <h1>WDD 131 – Dynamic Web Fundamentals - Everett Havey</h1>
     <header>
-        <nav><a href="#">Home</a>
-        <a href="https://byupw.instructure.com/">Canvas</a>
-        <a href="wwr/">Scripture</a>
-        <a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a>
-        <a href="final/">Final Project</a>
-        <a></a>
-        <a></a>
+    <nav>
+        <ul>
+            <a href="#">Home</a>
+            <a href="https://byupw.instructure.com/">Canvas</a>
+            <a href="#">Scripture</a>
+            <a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a>
+            <a href="final/">Final Project</a>
+            <a></a>
+            <a></a>
+        </ul>
     </nav>
 
     </header>
