--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
     <nav>
         <ul>
-            <a href="#">Home</a>
-            <a href="https://byupw.instructure.com/">Canvas</a>
-            <a href="#">Scripture</a>
-            <a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a>
-            <a href="final/">Final Project</a>
+            <li><a href="#">Home</a></li>
+            <li><a href="https://byupw.instructure.com/">Canvas</a></li>
+            <li><a href="#">Scripture</a></li>
+            <li><a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a></li>
+            <li><a href="final/">Final Project</a></li>
             <a></a>
             <a></a>
         </ul>
