--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <main>
         <section class="card">
 
-            <h2></h2>
+            <h2>About</h2>
 
             <img src="images/Profile.webp" alt="Everett">
 
             <p>paragraph</p>
         </section>
         <section class="card">
-            <h2></h2>
+            <h2>Other</h2>
             <img src="images/jpflag.png" alt="Japan Flag">
         </section>
     </main>
