--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 – Dynamic Web Fundamentals - Everett Havey</title>
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="scripts" href="scripts/getdates.js">
+    <script src="getdates.js" defer></script>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
 
