--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
 
     <footer>
         <p><span id="2025">Everett Havey | Tokyo, Japan</span></p>
-        <p><span id="lastModified"></span></p>
-        <p id="full"></p>
-        <p id="world-full"></p>
-        <p id="short"></p>
-        <p id="medium"></p>
-        <p id="year"></p>
-        <p id="month"></p>
-        <p id="day"></p>
-        <p id="dayofweek"></p>
+        <nav>
+            <p><span id="lastModified"></span></p>
+            <p id="full"></p>
+            <p id="world-full"></p>
+            <p id="short"></p>
+            <p id="medium"></p>
+            <p id="year"></p>
+            <p id="month"></p>
+            <p id="day"></p>
+            <p id="dayofweek"></p>
+        </nav>
     </footer>
 
 </body>
