--- a/week02/bom.html
+++ b/week02/bom.html
@@ -1,7 +1,25 @@
-<h1>📖 Book of Mormon - Top 10</h1>
-<main>
-	<label for="favchap">Enter Book and Chapter: </label>
-	<input type="text" id="favchap" placeholder="Alma 5">
-	<button type="submit">Add Chapter</button>
-	<ul id="list"></ul>
-</main>
+<!DOCTYPE html>
+
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Everett Havey | WDD 131</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description" content="Welcome to favoriate chapters.">
+    <meta name="author" content="Everett Havey">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <h1>📖 Book of Mormon - Top 10</h1>
+    <main>
+	    <label for="favchap">Enter Book and Chapter: </label>
+	    <input type="text" id="favchap" placeholder="Alma 5">
+	    <button type="submit">Add Chapter</button>
+	    <ul id="list"></ul>
+    </main>
+</body>
+</html>
