--- a/week02/bom.html
+++ b/week02/bom.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Everett Havey | WDD 131</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/bom.css">
     <meta name="description" content="Welcome to favoriate chapters.">
     <meta name="author" content="Everett Havey">
     
