--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WDD 131 | Dynamic Web Fundamentals - Everett Havey</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="script" href="scripts/getdates.js">
-    <script src="getdates.js"></script>
+    <script src="getdates.js" defer></script>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
 
