--- a/week02/bom.html
+++ b/week02/bom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Everett Havey | WDD 131</title>
     <link rel="stylesheet" href="styles/bom.css">
-    <script type="module" src="scripts/bomscript.js"></script>
+    <script src="scripts/bomscript.js" defer></script>
     <meta name="description" content="Welcome to favoriate chapters.">
     <meta name="author" content="Everett Havey">
     
