--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <main>
         <section class="card about-card">
             <h2>About Everett</h2>
-            <p class="intro">A brief introduction about Everett can go here.</p>
-            <img src="images/Profile.webp" alt="Everett">
+            <div class="about-content">
+                <p class="intro">A brief introduction about Everett can go here.</p>
+                <img src="images/jpflag.png" alt="Japan Flag" class="flag-image">
+            </div>
+            <img src="images/Profile.webp" alt="Everett" class="profile-image">
             <h2 class="location-heading"><u>Current Location</u></h2>
-            <img src="images/jpflag.png" alt="Japan Flag">
             <p>Currently residing in Minato City, Tokyo, Japan.</p>
         </section>
         <section class="card">
