--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 | Dynamic Web Fundamentals - Everett Havey</title>
-    <meta name="description" content="WDD 131 | Everett Havey">
-    <meta name="author" content="Everett Havey">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
+    <meta name="description" content="WDD 131 | Everett Havey">
+    <meta name="author" content="Everett Havey">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>WDD 131 – Dynamic Web Fundamentals - Everett Havey</h1>
@@ -26,17 +30,15 @@
     <main>
         <section class="card about-card">
             <h2>About Everett</h2>
-            <div class="about-content">
-                <p class="intro">A brief introduction about Everett can go here.</p>
-                <img src="images/jpflag.png" alt="Japan Flag" class="flag-image">
-            </div>
-            <img src="images/Profile.webp" alt="Everett" class="profile-image">
-            <h2 class="location-heading"><u>Current Location</u></h2>
-            <p>Currently residing in Minato City, Tokyo, Japan.</p>
+            <p class="intro">A brief introduction about Everett can go here.</p>
+            <img src="images/Profile.webp" alt="Everett">
+            <h2 class="location-heading"><u>Japan</u></h2>
+            <img src="images/jpflag.png" alt="Japan Flag">
+            <p>Japan Flag</p>
         </section>
         <section class="card">
             <h2>Extra</h2>
-            <p>Content for this section will be added later.</p>
+            <p>This will be added later...</p>
         </section>
     </main>
 
