--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="https://byupw.instructure.com/">Canvas</a></li>
                 <li><a href="#">Scripture</a></li>
                 <li><a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a></li>
