--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
                 <li><a href="https://byupw.instructure.com/">Canvas</a></li>
                 <li><a href="#">Scripture</a></li>
                 <li><a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a></li>
-                <li><a href="final/">Final Project</a></li>
+                <li><a href="#">Final Project</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="card about-card">
-            <h2>About Everett</h2>
+            <h2>About Me</h2>
             <div class="about-content">
-                <p class="intro">A brief introduction about Everett can go here.</p>
+                <p class="intro">Coming Soon...</p>
                 <img src="images/jpflag.png" alt="Japan Flag" class="flag-image">
             </div>
+            
             <img src="images/Profile.webp" alt="Everett" class="profile-image">
-            <h2 class="location-heading"><u>Current Location</u></h2>
-            <p>Currently residing in Minato City, Tokyo, Japan.</p>
+            <h2 class="location-heading"><u>Japan</u></h2>
+            <p>Japan description.</p>
         </section>
         <section class="card">
             <h2>Extra</h2>
