--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <li><a href="#">Scripture</a></li>
                 <li><a href="https://www.linkedin.com/in/everett-havey-679128313/">Linkedin</a></li>
                 <li><a href="#">Final Project</a></li>
+                <li><a href="#">Final Project</a></li>
+                <li><a href="#">Final Project</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -27,10 +30,10 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <p class="intro">Coming Soon...</p>
-                <img src="images/jpflag.png" alt="Japan Flag" class="flag-image">
+                <img src="..." alt="Japan Flag" class="flag-image">
             </div>
             
-            <img src="images/Profile.webp" alt="Everett" class="profile-image">
+            <img src="..." alt="Everett" class="profile-image">
             <h2 class="location-heading"><u>Japan</u></h2>
             <p>Japan description.</p>
         </section>
