--- a/temples.html
+++ b/temples.html
@@ -24,6 +24,42 @@
     </header>
     <main>
         <h2>Home</h2>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
+        <figure>
+            <img src="images/" alt="A descriptive alternative text for the image">
+            <figcaption>A brief caption explaining the image.</figcaption>
+        </figure>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Everett Havey | Tokyo, Japan</p>
