--- a/temples.html
+++ b/temples.html
@@ -25,11 +25,11 @@
     <main>
         <h2>Home</h2>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
+            <img src="images/TokyoTemple.jpg" alt="Tokyo Temple">
             <figcaption>A brief caption explaining the image.</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
+            <img src="images/SaltLakeCityTemple.png" alt="SaltLakeCityTemple">
             <figcaption>A brief caption explaining the image.</figcaption>
         </figure>
         <figure>
