--- a/temples.html
+++ b/temples.html
@@ -26,11 +26,11 @@
         <h2>Home</h2>
         <figure>
             <img src="images/TokyoTemple.jpg" alt="Tokyo Temple">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <figcaption>Japan, Tokyo Temple Image</figcaption>
         </figure>
         <figure>
             <img src="images/SaltLakeCityTemple.png" alt="SaltLakeCityTemple">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <figcaption>Utah, Salt Lake City Temple</figcaption>
         </figure>
         <figure>
             <img src="images/" alt="A descriptive alternative text for the image">
