--- a/temples.html
+++ b/temples.html
@@ -33,8 +33,8 @@
             <figcaption>Utah, Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/ProvoTemple.jpg" alt="ProvoTemple">
+            <figcaption>Utah, Provo City Center Temple</figcaption>
         </figure>
         <figure>
             <img src="images/" alt="A descriptive alternative text for the image">
