--- a/temples.html
+++ b/temples.html
@@ -37,28 +37,28 @@
             <figcaption>Utah, Provo City Center Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/TokyoTemple.jpg" alt="Tokyo Temple">
+            <figcaption>Japan, Tokyo Temple Image</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/SaltLakeCityTemple.png" alt="SaltLakeCityTemple">
+            <figcaption>Utah, Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/ProvoTemple.jpg" alt="ProvoTemple">
+            <figcaption>Utah, Provo City Center Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/TokyoTemple.jpg" alt="Tokyo Temple">
+            <figcaption>Japan, Tokyo Temple Image</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/SaltLakeCityTemple.png" alt="SaltLakeCityTemple">
+            <figcaption>Utah, Salt Lake City Temple</figcaption>
         </figure>
         <figure>
-            <img src="images/" alt="A descriptive alternative text for the image">
-            <figcaption>A brief caption explaining the image.</figcaption>
+            <img src="images/ProvoTemple.jpg" alt="ProvoTemple">
+            <figcaption>Utah, Provo City Center Temple</figcaption>
         </figure>
     </main>
     <footer>
