--- a/place.html
+++ b/place.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Everett Havey | WDD 131 Week 03 Project</title>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
     <link rel="stylesheet" href="styles/place.css">
 </head>
 <body>
     <header>
-
+        <h1>Everett Havey | WDD 131 Week 03 Project</h1>
     </header>
     <main>
 
