--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
-    <h1>WDD 131 – Dynamic Web Fundamentals - Everett Havey</h1>
+    <h1>WDD 131 | Dynamic Web Fundamentals - Everett Havey</h1>
     <header>
         <nav>
             <ul>
