--- a/place.html
+++ b/place.html
@@ -47,7 +47,7 @@
         <h2 class="weather-heading">Weather</h2>
         <img
             id="weather-icon"
-            src="images/placeholder-weather.png"
+            src="images/weather.png.png"
             alt="Current weather icon"
             class="weather-image"/>
         <p id="weather-description" class="weather-text">Loading weather...</p>
