--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Everett Havey | WDD 131 Week 03 Project</h1>
+        <h1>Place Name!</h1>
     </header>
     <main>
         <picture>
