--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Place Name!</h1>
+        <h1>london</h1>
     </header>
     <main>
         <picture>
@@ -31,7 +31,7 @@
     srcset="images/hero-mobile.webp 1x, images/hero-mobile@2x.webp 2x"
     type="image/webp"/>
   <img
-    src="images/hero-mobile.jpg"
+    src="images/london.jpg"
     srcset="
       images/hero-mobile.jpg        767w,
       images/hero-tablet.jpg       768w,
