--- a/place.html
+++ b/place.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section class="hero-image">
-            <img src="images/london.jpg" alt="london" class="london-image">
+            <img src="images/London.webp" alt="london" class="london-image">
        </section>
        
        
