--- a/place.html
+++ b/place.html
@@ -22,7 +22,7 @@
             <h2 class="weather-heading">Weather</h2>
             <img
                 id="weather-icon"
-                src="images/weather.png.png"
+                src="images/Weather.svg"
                 alt="Current weather icon"
                 class="weather-image"/>
             <p id="weather-description" class="weather-text">Loading weather...</p>
