--- a/place.html
+++ b/place.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>London</title>
+    <title>WDD 131 | Dynamic Web Fundamentals - Everett Havey</title>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
     <link rel="stylesheet" href="styles/place.css">
