--- a/place.html
+++ b/place.html
@@ -7,6 +7,10 @@
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
     <link rel="stylesheet" href="styles/place.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
