--- a/place.html
+++ b/place.html
@@ -41,6 +41,15 @@
             <p id="weather-description" class="weather-text">Loading weather...</p>
             <p id="weather-temperature" class="weather-text"></p>
         </div>
+
+        <div class="weather-container">
+            <h2>Current Weather</h2>
+            <div class="weather-details">
+                <p><strong>Temperature:</strong> <span id="current-temp">5°C</span></p>
+                <p><strong>Wind Speed:</strong> <span id="current-wind">10 km/h</span></p>
+                <p><strong>Wind Chill:</strong> <span id="windchill-factor">N/A</span></p>
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy;<span id="year">2025</span> Everett Havey 🌴 Country Page🌴</p>
