--- a/place.html
+++ b/place.html
@@ -38,7 +38,7 @@
                     src="images/Weather.svg"
                     alt="Current weather icon"
                     class="weather-image"/>
-                <p id="weather-description" class="weather-text">Loading weather...</p>
+                <p id="weather-description" class="weather-text">Current Weather...</p>
                 <p id="weather-temperature" class="weather-text"></p>
                 <div class="weather-details">
                     <p><strong>Temperature:</strong> <span id="current-temp">5°C</span></p>
