--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -24,6 +24,8 @@
     </header>
     <main>
         <h2>Home</h2>
+        <div class="res-grid">
+        </div>
         <script src="scripts/filtered-temples.js" defer></script>
     </main>
     <footer>
