--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
-    <link rel="stylesheet" href="styles/temples-large.css">
-    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/filtered-temples.css">
     <script src="scripts/filtered-temples.js" defer></script>
 </head>
 <body>
