--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Old</a></li>
+                <li><a href="#" id="oldLink">Old</a></li>
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
                 <li><a href="#">Small</a></li>
