--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -14,11 +14,11 @@
         <h1>Temple Album</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" id="homeLink" class="active">Home</a></li>
                 <li><a href="#" id="oldLink">Old</a></li>
-                <li><a href="#">New</a></li>
-                <li><a href="#">Large</a></li>
-                <li><a href="#">Small</a></li>
+                <li><a href="#" id="newLink">New</a></li>
+                <li><a href="#" id="largeLink">Large</a></li>
+                <li><a href="#" id="smallLink">Small</a></li>
             </ul>
         </nav>
     </header>
