--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -6,6 +6,11 @@
     <title>Document</title>
     <meta name="description" content="WDD 131 | Everett Havey">
     <meta name="author" content="Everett Havey">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <script src="scripts/filtered-temples.js" defer></script>
 </head>
