--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -12,7 +12,15 @@
         <h1>WDD 131 | Site Planning - Everett Havey</h1>
     </header>
     <main>
+        <h2>Site Name:</h2>
+        <p>Splashy Dashiez</p>
 
+        <h3>Site Purpose:</h3>
+        <p>For a car wash company to provide different types of car wash starting from a basic to a premium type.</p>
+
+        <h4>Scenarios:</h4>
+        <p>1. What type of washes do they provide?</p>
+        <p>2. What are some pricings for each washes?</p>
     </main>
     <footer>
 
