--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -12,6 +12,11 @@
 <body>
     <header>
         <h1>WDD 131 | Site Planning - Everett Havey</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Project</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
