--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -36,6 +36,28 @@
             <p>1. What type of washes do they provide?</p>
             <p>2. What are some pricings for each washes?</p>
         </section>
+        <section>
+            <h2>Color Schema:</h2>
+            <p></p>
+        </section>
+        <section>
+            <h2>Typography:</h2>
+            <p></p>
+        </section>
+        <section>
+            <h2>About Wireframe:</h2>
+            <div>
+                <img src="images/SplashyDashiezAbout.png" alt="AboutPage" class="about-image">
+            </div>
+            <h2>Home Wireframe:</h2>
+            <div>
+                <img src="images/SplashyDashiezHomePage.png" alt="AboutPage" class="about-image">
+            </div>
+            <h2>Washes Wireframe:</h2>
+            <div>
+                <img src="images/SplashyDashiezWashesPage.png" alt="AboutPage" class="about-image">
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Everett Havey</p>
