--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <main>
+        <header>
+            <h1>Site Planning | WDD131 Everett Havey</h1>
+        </header>
         <section>
             <h2>Site Name:</h2>
             <p>Splashy Dashiez</p>
@@ -31,7 +34,8 @@
         
         <section>
             <h2>Color Schema & Typography:</h2>
-            <p>A simple, clean design will be used with a primary color of a dark slate blue (#2c3e50) on a light grey background (#f4f4f9). Text will be a readable sans-serif like Roboto.</p>
+            <p>primary color - Deep sky blue (#00bfff) on a light grey background (#f4f4f9).</p>
+            <p>Text will be Roboto</p>
         </section>
 
         <section>
