--- a/form.html
+++ b/form.html
@@ -68,7 +68,7 @@
                 <input type="text" id="userName" name="userName">
             </fieldset>
 
-            <input type="submit" value="Submit Review">
+            <input type="submit" value="Post Review">
         </form>
     </main>
     <footer>
