--- a/review.html
+++ b/review.html
@@ -1,1 +1,28 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Review Form</title>
+    <meta name="description" content="Product review form for WDD 131 assignment.">
+    <meta name="author" content="Everett Havey">
+    <link rel="stylesheet" href="styles/form.css">
+</head>
+<body>
+    <header>
+        <h1>Product Review Form</h1>
+    </header>
+    <main>
+        <div>
+            <h2>Thanks you!</h2>
+            <p>Thanks for posting your review. Your feedback matters to us.</p>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; <span id="year"></span> Everett Havey</p>
+        <p id="full">Last Modified: <span id="lastModified"></span></p>
+    </footer>
+
+    <script src="scripts/form.js" defer></script>
+</body>
+</html>
