--- a/project/project.html
+++ b/project/project.html
@@ -14,10 +14,44 @@
 </head>
 <body>
     <header>
-
-    </header>
+        <div class="header-top">
+            <img src="images/SplashyDashiezLogo.png" alt="SplashyDashiezlogo">
+            <h1>Splashy Dashiez</h1>
+        </div>
+        <button class="hamburger-button">☰</button>
+    <button class="close-button" style="display: none;">✕</button>
+    <nav>
+        <h2>Our Services</h2> <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Washes</a></li>
+        </ul>
+    </nav>
+</header>
     <main>
-
+        <div class="finding-location">
+            Finding a location
+        </div>
+        <div class="car-wash-image">
+            Car Wash Image
+            </div>
+        <div class="membership-program-section">
+            Membership Program Section
+        </div>
+        <div class="facts-section">
+            <div class="fact-item">
+                <div class="img-placeholder">img</div>
+                1 fact
+            </div>
+            <div class="fact-item">
+                <div class="img-placeholder">img</div>
+                2 fact
+            </div>
+            <div class="fact-item">
+                <div class="img-placeholder">img</div>
+                3 fact
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Everett Havey | Tokyo, Japan</p>
