--- a/project/project.html
+++ b/project/project.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-top">
-            <img src="images/SplashyDashiezLogo.png" alt="SplashyDashiezlogo" width="100" height="100">
+            <img src="images/SplashyDashiezLogo.png" alt="SplashyDashiezlogo">
             <h1>Splashy Dashiez</h1>
         </div>
         <button class="hamburger-button">☰</button>
