--- a/project/project.html
+++ b/project/project.html
@@ -29,29 +29,40 @@
         </nav>
     </header>
     <main>
-        <div class="finding-location">
-            Finding a location
-        </div>
-        <div class="car-wash-image">
-            Car Wash Image
+        <section class="top-section-grid">
+            <div class="location-input-container">
+                <h2>Find a Wash Location</h2>
+                <input type="text" id="locationInput" placeholder="Enter your location">
+                <button id="findLocationButton">Search</button>
             </div>
-        <div class="membership-program-section">
-            Membership Program Section
-        </div>
-        <div class="facts-section">
-            <div class="fact-item">
-                <div class="img-placeholder">img</div>
-                1 fact
+            <div class="car-wash-image-main">
+                <img src="images/car-wash-placeholder.jpg" alt="Modern Car Wash Bay">
             </div>
-            <div class="fact-item">
-                <div class="img-placeholder">img</div>
-                2 fact
+        </section>
+
+        <section class="display-section">
+            <h2>Welcome to Splashy Dashiez!</h2>
+            <p>Your ultimate destination for a sparkling clean ride. We offer state-of-the-art car wash services designed to give your vehicle the care it deserves.</p>
+            <p>Explore our membership programs, learn interesting facts about car washing, and find a convenient location near you.</p>
+
+            <div class="membership-program-section">
+                Membership Program Section
             </div>
-            <div class="fact-item">
-                <div class="img-placeholder">img</div>
-                3 fact
+            <div class="facts-section">
+                <div class="fact-item">
+                    <div class="img-placeholder">img</div>
+                    1 fact
+                </div>
+                <div class="fact-item">
+                    <div class="img-placeholder">img</div>
+                    2 fact
+                </div>
+                <div class="fact-item">
+                    <div class="img-placeholder">img</div>
+                    3 fact
+                </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> Everett Havey | Tokyo, Japan</p>
