--- a/project/project.html
+++ b/project/project.html
@@ -35,7 +35,7 @@
                 <button id="findLocationButton">Search</button>
             </div>
             <div class="car-wash-image-main">
-                <img src="images/car-wash-placeholder.jpg" alt="Modern Car Wash Bay">
+                <img src="images/CarwashImage1.jpeg" alt="Modern Car Wash Bay">
             </div>
         </section>
 
