--- a/project/project.html
+++ b/project/project.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-top">
-            <img src="images/SplashyDashiezLogo.png" alt="SplashyDashiezlogo">
+            <h1><img src="images/SplashyDashiezLogo.png" alt="Splashy Dashiez Logo"></h1>
         </div>
         <button class="hamburger-button">☰</button>
         <button class="close-button" style="display: none;">✕</button>
@@ -45,7 +45,9 @@
             <p>Explore our membership programs, learn interesting facts about car washing, and find a convenient location near you.</p>
 
             <div class="membership-program-section">
-                Membership Program Section
+                <h3>Our Membership Programs</h3>
+                <p>Join our exclusive membership program today and enjoy unlimited washes, special discounts, and priority service. Keep your car sparkling clean all year round with our flexible plans designed to fit your needs.</p>
+                <p>Choose from a variety of tiers, including Basic, Premium, and Ultimate, each offering increasing benefits and savings. Sign up online or at any of our convenient locations!</p>
             </div>
             <div class="facts-section">
                 <div class="fact-item">
