--- a/project/project.html
+++ b/project/project.html
@@ -51,16 +51,16 @@
             </div>
             <div class="facts-section">
                 <div class="fact-item">
-                    <div class="img-placeholder">img</div>
-                    1 fact
+                    <div class="img-placeholder"><img src="images/Imagefact1.jpg" alt="Ultimate Wash/Premium Wash with Protective Coatings" width="250" height="75"></div>
+                    Ultimate Wash/Premium Wash with Protective Coatings
                 </div>
                 <div class="fact-item">
-                    <div class="img-placeholder">img</div>
-                    2 fact
+                    <div class="img-placeholder"><img src="images/Imagefact2.jpg" alt="Ceramic or Graphene Infused Wash" width="250" height="75"></div>
+                    Ceramic or Graphene Infused Wash
                 </div>
                 <div class="fact-item">
-                    <div class="img-placeholder">img</div>
-                    3 fact
+                    <div class="img-placeholder"><img src="images/Imagefact3.jpg" alt="Monthly Unlimited Wash Club with Top-Tier Plan" width="250" height="75"></div>
+                    Monthly Unlimited Wash Club with Top-Tier Plan
                 </div>
             </div>
         </section>
