--- a/project/credits.html
+++ b/project/credits.html
@@ -1,7 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Images sources</h1>
+    </header>
+    <main>
+        <P>https://www.pexels.com/photo/car-at-a-carwash-10446281/</P>
 
+        <P>https://www.pexels.com/photo/parked-white-coupe-during-night-3354648/</P>
 
-<P>https://www.pexels.com/photo/car-at-a-carwash-10446281/</P>
-
-<P>https://www.pexels.com/photo/parked-white-coupe-during-night-3354648/</P>
-
-<P>https://www.pexels.com/photo/carwashed-black-sedan-372810/</P>
+        <P>https://www.pexels.com/photo/carwashed-black-sedan-372810/</P>
+    </main>
+</body>
+</html>
