--- a/project/credits.html
+++ b/project/credits.html
@@ -10,6 +10,11 @@
         <h1>Images sources</h1>
     </header>
     <main>
+        <h2>ImageHeader:</h2>
+
+        <p></p>
+
+        <h2>ImageFacts:</h2>
         <P>https://www.pexels.com/photo/car-at-a-carwash-10446281/</P>
 
         <P>https://www.pexels.com/photo/parked-white-coupe-during-night-3354648/</P>
