--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -29,40 +29,25 @@
     </header>
     <main>
         <section class="top-section-grid">
-            <div class="location-input-container">
-                <h2>Find a Wash Location</h2>
-                <input type="text" id="locationInput" placeholder="Enter your location">
-                <button id="findLocationButton">Search</button>
-            </div>
-            <div class="car-wash-image-main">
-                <img src="images/CarwashImage1.jpeg" alt="Modern Car Wash Bay">
-            </div>
+            <h3>About Us</h3>
+            <p>description</p>
         </section>
-
         <section class="display-section">
-            <h2>Welcome to Splashy Dashiez!</h2>
-            <p>Your ultimate destination for a sparkling clean ride. We offer state-of-the-art car wash services designed to give your vehicle the care it deserves.</p>
-            <p>Explore our membership programs, learn interesting facts about car washing, and find a convenient location near you.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1056.3061378889022!2d-117.12104143631768!3d32.74971051723088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9545c1953c187%3A0x5d96cf8ab103e524!2s3419%20University%20Ave%2C%20San%20Diego%2C%20CA%2092104%2C%20USA!5e1!3m2!1sen!2sjp!4v1749853145201!5m2!1sen!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-            <div class="membership-program-section">
-                <h3>Our Membership Programs</h3>
-                <p>Join our exclusive membership program today and enjoy unlimited washes, special discounts, and priority service. Keep your car sparkling clean all year round with our flexible plans designed to fit your needs.</p>
-                <p>Choose from a variety of tiers, including Basic, Premium, and Ultimate, each offering increasing benefits and savings. Sign up online or at any of our convenient locations!</p>
+            <h3>Contacts</h3>
+            <div class="contact-details">
+                <p><strong>Address:</strong> 3419 University Avenue in San Diego</p>
+                <p><strong>Phone:</strong> <a href="tel:+15551234567">+1 (619) 555-0100</a></p>
+                <p><strong>Email:</strong> <a href="mailto:info@yourcompany.com">info@splashydashiez.com</a></p>
+                <p><strong>Business Hours:</strong></p>
+                <ul>
+                    <li>Monday - Friday: 9:00 AM - 5:00 PM</li>
+                    <li>Saturday: 8:00 AM - 6:00 PM</li>
+                    <li>Sunday: Closed</li>
+                </ul>
             </div>
-            <div class="facts-section">
-                <div class="fact-item">
-                    <div class="img-placeholder"><img src="images/Imagefact1.jpg" alt="Ultimate Wash/Premium Wash with Protective Coatings" width="250" height="75"></div>
-                    Ultimate Wash/Premium Wash with Protective Coatings
-                </div>
-                <div class="fact-item">
-                    <div class="img-placeholder"><img src="images/Imagefact2.jpg" alt="Ceramic or Graphene Infused Wash" width="250" height="75"></div>
-                    Ceramic or Graphene Infused Wash
-                </div>
-                <div class="fact-item">
-                    <div class="img-placeholder"><img src="images/Imagefact3.jpg" alt="Monthly Unlimited Wash Club with Top-Tier Plan" width="250" height="75"></div>
-                    Monthly Unlimited Wash Club with Top-Tier Plan
-                </div>
-            </div>
+
         </section>
     </main>
     <footer>
