--- a/project/project.html
+++ b/project/project.html
@@ -21,7 +21,7 @@
         <button class="close-button" style="display: none;">✕</button>
         <nav>
             <ul>
-                <li><a href="#">About Us</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Washes</a></li>
             </ul>
